<resources>
    <string name="app_name">Gotcha</string>

    <string name="hello_world">Hello world!this is gotcha</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_finish">Finish</string>
    <string name="action_setting1">Setting</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="username">Username</string>
    <string name="phonenumber">Phone Number(optional)</string>
    <string name="address">Address(optional)</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_password2">Repeat Password </string>
    <string name="action_sign_in">Log in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="mission">Join to help us prevent crime and protect the citizens of Philly</string>
    <string name="title_activity_setting1">setting1</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_filter">Filter Crime</string>
    <string name="button_report">Report Crime</string>
    <string name="title_activity_map_bar">map_bar</string>
    <string name="title_activity_report_crime">ReportCrime</string>
    <string name="title_activity_filtercrime">Filtercrime</string>
    <string-array name="crimetype">
        <item> Robbery</item>
        <item>Theft</item>
        <item>Burglary</item>

        </string-array>
    <string-array name="reportertype">
        <item> Victim</item>
        <item>Witness</item>

    </string-array>
    <string name="title_activity_loading">Loading</string>
</resources>
